--- a/podcasts.css
+++ b/podcasts.css
@@ -8,6 +8,11 @@ body {
     font-family: 'Saira', sans-serif;
 }
 
+.whole-container {
+    display: flex;
+    flex-direction: row;
+}
+
 .picture {
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("images/dad_podcasts.jpg");
     background-position: center;
